# ownmark_cleaner

./: .gitignore  LICENSE  README.md  patch_add_gaussian_blur.py  patch_fine_inpaint.py  patch_keep_bottom_right.py  patch_merge_before_keep_largest.py  patch_round_feather.py  patch_show_blur_controls.py  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: ci.yml
src/ownmark_cleaner/: __init__.py  cli.py  delogo_fine.py  detection.py  inpaint.py  video_io.py
templates/: index.html
tests/: test_utils.py
